--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-plugin-image": "^2.1.0",
     "gatsby-plugin-sharp": "^4.1.0",
     "gatsby-source-filesystem": "^4.1.0",
+    "gatsby-transformer-json": "^4.1.0",
     "react": "^17.0.1",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.1",
