--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "alisons-portfolio",
+  "name": "my-portfolio",
   "version": "1.0.0",
   "private": true,
-  "description": "Alisons Portfolio",
+  "description": "My Portfolio",
   "author": "alisonmyers",
   "keywords": [
     "gatsby"
@@ -17,7 +17,6 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
-    "bootstrap": "^5.1.3",
     "gatsby": "^4.1.0",
     "gatsby-plugin-image": "^2.1.0",
     "gatsby-plugin-mdx": "^3.1.0",
@@ -25,7 +24,6 @@
     "gatsby-source-filesystem": "^4.1.0",
     "gatsby-transformer-json": "^4.1.0",
     "react": "^17.0.1",
-    "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.1",
     "react-vertical-timeline-component": "^3.5.2"
   }
