--- a/package.json
+++ b/package.json
@@ -26,5 +26,11 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-vertical-timeline-component": "^3.5.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.0",
+    "gatsby-plugin-postcss": "^5.1.0",
+    "postcss": "^8.3.11",
+    "tailwindcss": "^2.2.19"
   }
 }
