--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gatsby-plugin-image": "^2.1.0",
     "gatsby-plugin-mdx": "^3.1.0",
     "gatsby-plugin-sharp": "^4.1.0",
+    "gatsby-remark-responsive-iframe": "^5.1.0",
     "gatsby-source-filesystem": "^4.1.0",
     "gatsby-transformer-json": "^4.1.0",
     "react": "^17.0.1",
