--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@react-icons/all-files": "^4.1.0",
+    "bootstrap": "^5.1.3",
     "gatsby": "^4.1.0",
     "gatsby-plugin-image": "^2.1.0",
     "gatsby-plugin-mdx": "^3.1.0",
@@ -26,6 +27,8 @@
     "gatsby-source-filesystem": "^4.1.0",
     "gatsby-transformer-json": "^4.1.0",
     "react": "^17.0.1",
+    "react-awesome-slider": "^4.1.0",
+    "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.1",
     "react-vertical-timeline-component": "^3.5.2"
   },
