--- a/src/data/MyProjects.json
+++ b/src/data/MyProjects.json
@@ -2,20 +2,31 @@
     "title": "My Projects",
     "projects": [
         {
-            "id": "",
-            "title": "",
-            "date": "",
-            "course": "",
-            "goals": ["1", "2"],
-            "type": ""
+            "id": "ETEC512-1",
+            "title": "Learning Theories Concept Map",
+            "date": "2019-09-01",
+            "course": "ETEC 512",
+            "goals": ["1"],
+            "type": "paper",
+            "description": "describe the project",
+            "connections": "what connections can I make",
+            "goals_text": "how does this relate to my goals",
+            "reflection": "reflection on project",
+            "image": "vancouver_city.jpg"
+
         }, 
         {
-            "id": "",
-            "title": "",
-            "date": "",
-            "course": "",
-            "goals": "",
-            "type": ""
+            "id": "ETEC512-2",
+            "title": "Neuroscience and Learning Introductory Course",
+            "date": "2019-10-01",
+            "course": "ETEC 512",
+            "goals": ["1", "3"],
+            "type": "website",
+            "description": "describe the project",
+            "connections": "what connections can I make",
+            "goals_text": "how does this relate to my goals",
+            "reflection": "reflection on project",
+            "image": "vancouver_city.jpg"
         }
     ]
 
