--- a/src/data/MyProjects.json
+++ b/src/data/MyProjects.json
@@ -22,7 +22,7 @@
             "course": "ETEC 512",
             "goals": ["1", "3"],
             "type": "website",
-            "description": "describe the project",
+            "description": "Another description",
             "connections": "what connections can I make",
             "goals_text": "how does this relate to my goals",
             "reflection": "reflection on project",
