--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@react-icons/all-files": "^4.1.0",
     "bootstrap": "^5.1.3",
     "gatsby": "^4.1.0",
+    "gatsby-image": "^3.11.0",
     "gatsby-plugin-image": "^2.1.0",
     "gatsby-plugin-mdx": "^3.1.0",
-    "gatsby-plugin-sharp": "^4.1.0",
+    "gatsby-plugin-sharp": "^4.2.0",
     "gatsby-remark-responsive-iframe": "^5.1.0",
     "gatsby-source-filesystem": "^4.1.0",
     "gatsby-transformer-json": "^4.1.0",
+    "gatsby-transformer-sharp": "^4.2.0",
     "react": "^17.0.1",
     "react-awesome-slider": "^4.1.0",
     "react-bootstrap": "^2.0.2",
