--- a/src/data/MyProjects.json
+++ b/src/data/MyProjects.json
@@ -11,7 +11,7 @@
             "description": "'How do we learn?' Learning theories describe how ",
             "connections": "what connections can I make",
             "goals_text": "Learning the language of educators was an important reason for my interest in the MET program. In order to make connections between technology, students, and instructors it is important to have a good understanding of the context of the three.",
-            "reflection": "While this concept map is a simple one, it helped me to establish some foundational knowledge about learning theories, their histories, and their relationships to each oth",
+            "reflection": "reflection on project",
             "image": "vancouver_city.jpg"
 
         }, 
@@ -22,11 +22,11 @@
             "course": "ETEC 512",
             "goals": ["1", "3", "4"],
             "type": "website",
-            "description": "In addition to ",
+            "description": "This introductory course was developed to introduce our peers to the neuroscience of learning. My background is in psychology, so the development of the content and the course itself was also an opportunity to review some of these concepts myself, but to think about them from the perspective of course design, or in relation to other learning theories.",
             "connections": "what connections can I make",
             "goals_text": "Some text <br> more text",
             "reflection": "reflection on project",
-            "image": "vancouver_city.jpg"
+            "image": "ETEC512-2.png"
         },
 
         {
@@ -36,9 +36,9 @@
             "course": "ETEC 520",
             "goals": ["1"],
             "type": "paper",
-            "description": "Educational technology can be adopted at multiple levels: in a classroom, a program, or an entire institution. This evaluation guaged institutional preparedness for eLearning by examining institutional culture, preparedness, and infrastructure.",
+            "description": "Educational technology can be adopted at multiple levels: in a classroom, a program, or an entire institution. This evaluation guaged institutional preparedness eLearning by examining institutional culture, preparedness, and infrastructure.",
             "connections": "what connections can I make",
-            "goals_text": "Educational technologies can be adopted at a classroom level, but are more often adopted at institutional levels. For example, learning management systems are now common-place at large Canadian institutions. Adoption of technologies at a high level require investments in people and infrastructure that needs to outlast the individual technologies. ",
+            "goals_text": "how does this relate to my goals",
             "reflection": "reflection on project",
             "image": "vancouver_city.jpg"
         }, 
@@ -50,10 +50,10 @@
             "course": "ETEC 530",
             "goals": ["1", "2"],
             "type": "workshop",
-            "description": "In this paper and accompanying workshop, I propose that Design Thinking is an appropriate model to connect constructivist theory with practical application. The workshop will have participants use an adapted Design Thinking process to plan a constructivist lesson.",
+            "description": "In this paper and accompanying workshop, I propose that Design Thinking is an appropriate model to connect Constructivist theory with practical application. The workshop proposed that participants use an adapted Design Thinking process to plan a constructivist lesson.",
             "connections": "what connections can I make",
             "goals_text": "how does this relate to my goals",
-            "reflection": "This project was my first deep-dive into Constructivism, and I admittedly struggled to reconcile constructivism as a philosophy and as a learning theory.",
+            "reflection": "reflection on project",
             "image": "vancouver_city.jpg"
         },
 
@@ -64,7 +64,7 @@
             "course": "ETEC 543",
             "goals": ["1", "3"],
             "type": "dashboard",
-            "description": "This dashboard was developed for ETEC 543 as my 'Learning Analytics Adventure'. This was one of two Tableau projects developed over the course of my MET experience. ",
+            "description": "Learning Analytics  ",
             "connections": "what connections can I make",
             "goals_text": "how does this relate to my goals",
             "reflection": "reflection on project",
@@ -72,10 +72,10 @@
         },
 
         {
-            "id": "ETEC524-1",
+            "id": "ETEC24-1",
             "title": "A Course Companion Website",
             "date": "2019-09-01",
-            "course": "ETEC 524",
+            "course": "ETEC 24",
             "goals": ["1", "4"],
             "type": "website",
             "description": "'How do we learn?' Learning theories describe how ",
@@ -90,10 +90,10 @@
             "id": "ETEC90-1",
             "title": "This ePortfolio",
             "date": "2019-09-01",
-            "course": "ETEC 512",
+            "course": "ETEC 590",
             "goals": ["4"],
             "type": "website",
-            "description": "'How do we learn?' Learning theories describe how ",
+            "description": "Throughout the MET program, I have most enjoyed being able to build tools. This ePortfolio is no exception, and the biggest challenge. This ePortfolio dynamically creates its content, including what you are reading now.",
             "connections": "what connections can I make",
             "goals_text": "how does this relate to my goals",
             "reflection": "reflection on project",
