update json names

--- a/src/data/MyProjects.json
+++ b/src/data/MyProjects.json
@@ -10,7 +10,7 @@
                 "course": "ETEC 510",
                 "goals": ["1"],
                 "type": "website",
-                "description": " ",
+                "description": "For ETEC 510 we developed a reddit community for educators interested in virtual reality (VR) production. We suggested post types, flairs, and the opportunity to review work or provide feedback to members of the community. As part of the development, we each created some of our own VR work. I used a tool called edu.cospaces to program my first VR game! Included in this project are two links: first to the game, second to the reddit group.",
                 "connections": "",
                 "goals_text": "",
                 "reflection": "",
