add link to blog

--- a/src/data/MyProjects.json
+++ b/src/data/MyProjects.json
@@ -133,7 +133,7 @@
             "goals_text": "how does this relate to my goals",
             "reflection": "I had hoped to do more writing and research throughout my courses - as this is not something I noramlly have much time for in my day-to-day. However, when the option was available to create something, that was the path I generally took.",
             "image": "../images/ETEC590-1.png",
-            "links": []
+            "links": ["https://alisonmyers.gatsby.io/blogs"]
 
         }
     ]
