--- a/src/data/MyProjects.json
+++ b/src/data/MyProjects.json
@@ -112,7 +112,7 @@
             "course": "ETEC 543",
             "goals": ["1", "3"],
             "type": "dashboard",
-            "description": "Learning Analytics... ",
+            "description": "Learning Analytics can be used to inform instructors about their student experience in online environments, and provide information about the courses they have developed and taught. However, many learning analytics systems miss instructor intent in the provided data. This dashboard was designed to demonstrate the value of including learning design in a learning analytics dashboard.",
             "connections": "This was one of two Tableau projects developed over the course of my MET experience. The prototype was an important stepping stone for the development of a dashboard template for my self-directed ETEC 590 project.",
             "goals_text": "",
             "reflection": "",
