--- a/src/data/MyProjects.json
+++ b/src/data/MyProjects.json
@@ -10,8 +10,8 @@
                 "course": "ETEC 510",
                 "goals": ["1"],
                 "type": "website",
-                "description": "For ETEC 510 we developed a reddit community for educators interested in virtual reality (VR) production. We suggested post types, flairs, and the opportunity to review work or provide feedback to members of the community. As part of the development, we each created some of our own VR work. I used a tool called edu.cospaces to program my first VR game! Included in this project are two links: first to the game, second to the reddit group.",
-                "connections": "",
+                "description": "For ETEC 510 we developed a reddit community for educators interested in virtual reality (VR) production. We suggested post types, flairs (like tags), and the opportunity to review work or provide feedback to members of the community. As part of the development, we each created some of our own VR work. I used a tool called edu.cospaces to program my first VR game! Included in this project are two links: first to the game, second to the reddit group.",
+                "connections": "Two themes originated in ETEC 510 that I have noticed again and again in the MET program: community 'outside of the classroom', and 'playing' with technology. We chose Reddit as our platform for engaging with others because it is a popular, open, discussion platform. Developing, and engaging with communities of educators can be incredibly valuable, especially when exploring new or up-and-coming technology. It was important to begin to consider how to continue our experiences and communities once a course has 'ended'.",
                 "goals_text": "",
                 "reflection": "https://www.reddit.com/r/VReducationProduction",
                 "image": "../images/ETEC510-1b.png",
@@ -28,7 +28,7 @@
                 "goals": ["1"],
                 "type": "image",
                 "description": "This concept map was developed to demonstrate understanding of the history and context of important learning theories. This was one of (many) concept maps I developed throughout the MET program.",
-                "connections": "",
+                "connections": "This artifact introduced me to a tool that I have integrated into my learning and sharing of knowledge - concept maps and diagrams.",
                 "goals_text": "",
                 "reflection": "Learning the language of educators was an important reason for my interest in the MET program. In order to make connections between technology, students, and instructors it is important to have a good understanding of the context of the three.",
                 "image": "../images/ETEC512-1.png",
@@ -43,10 +43,10 @@
                 "course": "ETEC 512",
                 "goals": ["1", "3", "4"],
                 "type": "website",
-                "description": "This introductory course was developed to introduce our peers to the neuroscience of learning. My background is in psychology, so the development of the content and the course itself was also an opportunity to review some of these concepts myself, but to think about them from the perspective of course design, or in relation to other learning theories.",
-                "connections": "",
+                "description": "This 'introductory course' was developed to introduce our peers to the neuroscience of learning. My background is in psychology, so the development of the content and the course itself was also an opportunity to review some of these concepts myself, but to think about them from the perspective of course design, or in relation to other learning theories.",
+                "connections": "We used Rise as our platform for developing our course. It truly was pleasure to build because the platform itself was quite intuitive, dealt with the 'look and feel', and offered customization that we thought was important. ",
                 "goals_text": "",
-                "reflection": "Course discussion often centered around what level of expertise in the many areas of learning were required by educators. Do educators need to be experts in neuroscience?, for example. The general concensus was that expertise is not required, but the ability to evaluate information is. We included 'neuromyths' throughout our neuroscience course. Neuromyths are commonly held beliefs about how the brain works, even when there is no scientific evidence to support these beliefs. Or worse, when there is scientific evidence to the opposite of the myth. The challenge for educators is that neuromyths are pervasive online - from personal blogs, to educational vendor solutions. While it is not necessary for educators to be experts in neuroscience, they need to have the skills to identify neuromyths when they see them. ETEC 500 was an important course for the develpoment of these types of skills.",
+                "reflection": "Course discussion often centered around what level of expertise in the many areas of learning were required by educators. 'Do educators need to be experts in neuroscience?', for example. The general concensus was that expertise is not required, but the ability to evaluate information is. We included 'neuromyths' throughout our neuroscience course. Neuromyths are commonly held beliefs about how the brain works, even when there is no scientific evidence to support these beliefs. Or worse, when there is scientific evidence to the opposite of the myth. The challenge for educators is that neuromyths are pervasive online - from personal blogs, to educational vendor solutions. While it is not necessary for educators to be experts in neuroscience, they need to have the skills to identify neuromyths when they see them. ETEC 500 was an important course for the develpoment of these types of skills.",
                 "image": "../images/ETEC512-2.png",
                 "links": ["https://rise.articulate.com/share/kAPXNTL2603967LvhLp7PRUNXFe7UJm3#/"]
             }
