--- a/src/data/MyProjects.json
+++ b/src/data/MyProjects.json
@@ -11,8 +11,8 @@
                 "goals": ["1"],
                 "type": "website",
                 "group": "Brogan Pratt, Miguel Strother, Jamie Tooze, Raisa Vecina",
-                "description": "<p>We developed a reddit community for educators interested in virtual reality (VR) production. We suggested post types, flairs (like tags), and the opportunity to review work or provide feedback to members of the community. These suggestions were meant to provide initial opportunities for engagement in order to promote <span class='tag-text'>digital citizenship</span>, but our hope was that the community would evolve its own practices over time.</p> <p>As part of the development, we each created some of our own VR prototypes. I used a tool called edu.cospaces to program my first VR game.</p>",
-                "connections": "Two themes originated in ETEC 510 that I have noticed again and again in the MET program: digital citizenship and community 'outside of the classroom' and 'tinkering', <span class='tag-text'>geeking out</span>, or I would say 'playing' with technology. We chose Reddit as our platform for engaging with others because it is a popular, open, discussion platform. Developing, and engaging with communities of educators can be incredibly valuable, especially when exploring new or up-and-coming technology. It was important to begin to consider how to continue our experiences and communities once a course has 'ended'.",
+                "description": "<p>We developed a Reddit community for educators interested in virtual reality (VR) production. We suggested post types, flairs (like tags), and the opportunity to review work or provide feedback to members of the community. These suggestions were meant to provide initial opportunities for engagement in order to promote <span class='tag-text'>digital citizenship</span>, but our hope was that the community would evolve its own practices over time.</p> <p>As part of the development, we each created some of our own VR prototypes. I used a tool called edu.cospaces to program my first VR game.</p>",
+                "connections": "Two themes originated in ETEC 510 that have made an impact: digital citizenship or community 'outside of the classroom', and 'tinkering' or <span class='tag-text'>geeking out</span>. We chose Reddit as our platform for engaging with others because it is a popular, open, discussion platform. Developing, and engaging with communities of educators can be incredibly valuable, especially when exploring new or up-and-coming technology. It was important to begin to consider how to continue our experiences and communities once a course had 'ended'.",
                 "goals_text": "",
                 "reflection": "https://www.reddit.com/r/VReducationProduction",
                 "image": "../images/ETEC510-1b.png",
@@ -131,7 +131,7 @@
             "connections": "what connections can I make",
             "goals_text": "how does this relate to my goals",
             "reflection": "reflection on project",
-            "image": "../images/ETEC524-1.png",
+            "image": "../images/ETEC524-1b.png",
             "iframe": "",
             "links": ["https://intro-to-data-and-viz.github.io/introduction"],
             "tags": ["design", "tinkering"]
