add la dasbhoard slides

--- a/src/data/MyProjects.json
+++ b/src/data/MyProjects.json
@@ -175,7 +175,7 @@
             "reflection": "",
             "image": "../images/ETEC580-1b.png",
             "links": ["https://github.com/saud-learning-services/course-details"],
-            "iframe": ""
+            "iframe": "https://docs.google.com/presentation/d/e/2PACX-1vSI7VOiciqfJl4WDxP7WNzx7oW4X2bs51eq8b-nQ1HcbRTQnZICqd_UHLl-S-sH2hTWmu0cONGPapPQ/embed?start=false&loop=false&delayms=3000"
 
         },
       
